<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AskMe</string>
    <string name="action_settings">Settings</string>
    <string name="question_text">Constantipole is the largest city in Turkey</string>
    <string name="true_button">Trueeee</string>
    <string name="false_button">Falseee</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">InCorrect!</string>
    <string name="next_button">Next</string>
    <string name="question_oceans">The pacific ocean is larger than the Atlantic</string>
    <string name="question_mideastt">The source of the Nile river is in Egypt</string>
    <string name="question_aneruca">The Amazon River is the longest river in the Americas</string>
    <string name="warning_text"> Are you sure you want to do this ?</string>
    <string name="show_answer_button"> Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">CheatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_ask">Ask</string>
    <string name="action_answer">Answer</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_me">Me</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_list">list</string>

    <string name="health">Health</string>

</resources>
